<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MapViewFragment">

    <com.google.android.gms.maps.MapView
        android:id="@+id/map_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:elevation="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_margin="16dp"
            android:background="@drawable/background_chip"
            app:contentInsetStart="0dp"
            app:layout_scrollFlags="scroll|enterAlways">

            <EditText
                android:id="@+id/search_bar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_location_pin"
                android:drawableEnd="@drawable/ic_search"
                android:drawablePadding="12dp"
                android:hint="@string/map_search_hint"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:singleLine="true"
                android:paddingHorizontal="16dp"
                android:textColor="@color/white"
                android:textColorHint="@color/text_input_color_selector" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom"
        android:padding="16dp"
        android:background="@drawable/background_gradient_wave">

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chip_group_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:singleLine="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_agriculture"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_agriculture"
                    android:textColor="@color/white"
                    app:chipBackgroundColor="@color/background_chip_color"
                    app:chipStrokeColor="@color/vote_policy_yellow_primary"/>
                
                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_road"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_road"
                    android:textColor="@color/white"
                    app:chipBackgroundColor="@color/background_chip_color"
                    app:chipStrokeColor="@color/vote_policy_yellow_primary"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chip_electricity"
                    style="@style/Widget.MaterialComponents.Chip.Filter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter_electricity"
                    android:textColor="@color/white"
                    app:chipBackgroundColor="@color/background_chip_color"
                    app:chipStrokeColor="@color/vote_policy_yellow_primary"/>
                
            </com.google.android.material.chip.ChipGroup>
        </HorizontalScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_locate_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="16dp"
            android:text="@string/map_locate_me"
            android:backgroundTint="@color/vote_policy_yellow_primary"
            android:textColor="@color/black"/>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout> 